--- a/Koala/_bloques.scss
+++ b/Koala/_bloques.scss
@@ -1,12 +1,125 @@
-.pestañaPrincipal {
-    background: $color-pestaña_ligth;
-    width: 1438px;
-    height: $alto-pestaña_principal;
-    box-shadow: $box-shadow;
-}
+/*Comportamiento*/
 
-.pestañaPrincipal-h1 {
-    color: $color-caja_busqueda;
-    font-family: $font-family_principal;
-    font-size: $font-size_pequeña;
+body {
+    background-color: $color-backgroud_light;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+/*------------------Clases principales de flex y centrado------------------------*/
+
+    .flex-column {
+        display: flex;
+        flex-flow: column nowrap;
+    }
+
+    .flex-row {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .flex-wrap {
+        flex-wrap: wrap;
+    }
+
+    .center {
+        justify-content: center;   
+        align-items: center;
+    }
+
+    .align-center { 
+        align-items: center;
+    }
+    
+    .justify-center {
+        justify-content: center;
+    }
+
+    .boton-gif {
+      position: relative;
+      top: 237px;
+      left: -80px;
+    }
+
+    .x-close {
+        position: absolute;
+        width: 16px;
+        height: 14px;
+        z-index: 10000;
+        margin-top: 7px;
+        margin-right: 10px;
+
+    }
+
 }
+/*------------------------------------------------------------------------------------------------------------*/
+    .seccion-barra-navegacion {
+        width: 100%;
+    }
+
+        .div-barra-navegacion {
+            height: 102.6px;
+            width: 82.9%;
+        }
+
+            .logo {
+                width: $ancho-logo;               
+            }
+
+            .div-botones--barra-navegacion {
+                width: 92.9%;;
+                justify-content: flex-end;   
+            }
+                
+                .boton-tema {
+                    margin-left: 15px;
+                }
+                
+                .texto-mis-gifos {
+                    margin: 0px 0px 0px 15px;
+                }
+
+            .contenedor-busqueda-blanco {
+                width: 100%;
+                height: 72px;
+            }
+
+    .section-sugerimos {
+        margin-top: 64px;
+    }
+
+        .div-resultado-sugerimos {
+            margin-top: 15px;
+            width: 83.4%;
+        }
+        
+            .caja-gifs-sugeridos-1 {
+                position: relative;                
+            }
+                .div-superior-pestaña{
+                    display: flex;
+                    flex-flow: row-reverse;
+                    position: relative;
+                    width: 100%;
+                }
+                .pestaña-1 {
+                    z-index: 1;
+                    margin-right: 4px;
+                }
+
+
+                .boton-gif-1 {
+                    position: absolute;
+                    top:260px ;
+                    left: 10px;
+                }
+
+
+
+    .section-tendencias {
+        margin-top: 64px;
+        width: 100%;
+    }
+        .div-resultados-tendencias {
+            margin-top: 17px;
+            width: 83.4%;
+        }
