--- a/Koala/_bloques.scss
+++ b/Koala/_bloques.scss
@@ -34,6 +34,11 @@ body {
         justify-content: center;
     }
 
+    .boton_buscar {
+        position: relative;
+        justify-content: space-around;
+    }
+
     .boton-gif {
       position: relative;
       top: 237px;
@@ -66,6 +71,8 @@ body {
         right: 8px;
     }
 
+    
+
 }
 /*------------------------------------------------------------------------------------------------------------*/
     .seccion-barra-navegacion {
@@ -97,7 +104,17 @@ body {
             .contenedor-busqueda-blanco {
                 width: 100%;
                 height: 72px;
+                justify-content: space-evenly;
             }
+
+                .imagen-lupa {
+                    position: absolute;
+                    top: 10px;
+                    left: 10px;
+                    width: 14px;
+                    height: 14px;
+                    
+                }
 
     .section-sugerimos {
         margin-top: 64px;
