--- a/Koala/estilo.css
+++ b/Koala/estilo.css
@@ -19,6 +19,13 @@
   border: 1px solid #4C2F99;
   box-shadow: inset -2px -2px 0 0 #2124B3, inset 2px 2px 0 0 #FFFFFF; }
 
+.boton--buscar {
+  width: 8.5%;
+  height: 36px;
+  background: #E6E6E6;
+  border: 1px solid #808080;
+  box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF; }
+
 .boton--grande {
   width: 12.1%; }
 
@@ -27,9 +34,6 @@
 
 .boton--pequeno {
   width: 3.1%; }
-
-.boton--buscar {
-  width: 102px; }
 
 .boton-texto {
   font-family: "Chakra Petch", sans-serif;
@@ -53,7 +57,8 @@
 
 .boton-texto--buscar {
   font-size: 16px;
-  line-height: 32px; }
+  line-height: 32px;
+  color: #B4B4B4; }
 
 .boton-texto--ver-mas {
   font-size: 14px;
@@ -125,7 +130,7 @@
   border: 1px solid #979797; }
 
 .caja-contenedor-busqueda-blanco__margin {
-  margin: 0px 0px 0px 15px; }
+  margin: 0px 0px 0px 0px; }
 
 .caja-titulo {
   width: 82.9%;
@@ -174,6 +179,9 @@ body {
     align-items: center; }
   body .justify-center {
     justify-content: center; }
+  body .boton_buscar {
+    position: relative;
+    justify-content: space-around; }
   body .boton-gif {
     position: relative;
     top: 237px;
@@ -221,7 +229,15 @@ body {
 
 .contenedor-busqueda-blanco {
   width: 100%;
-  height: 72px; }
+  height: 72px;
+  justify-content: space-evenly; }
+
+.imagen-lupa {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 14px;
+  height: 14px; }
 
 .section-sugerimos {
   margin-top: 64px; }
