--- a/Koala/_variables.scss
+++ b/Koala/_variables.scss
@@ -40,7 +40,8 @@ $ancho-caja_contenedora_buscar: 82.9%; //1200px;
 $ancho-caja-contenedor-busqueda-blanco: 88%;
 $ancho-caja_titulo: 82.9%; //1200px;
 $ancho-contenedorGifs: 82.9%; //1200px;
-$ancho-logo: 7.13%; //102.6px;
+$ancho-logo: 102.6px; //102.6px;
+$alto-logo: 64px;
 $ancho-boton_grande: 12.1%; //144px;
 $ancho-boton_mediano: 11%; //131px;
 $ancho-boton_pequeño: 3.1%; //36px;
