Estilado de texto cuadro

--- a/Koala/_elementos.scss
+++ b/Koala/_elementos.scss
@@ -70,7 +70,13 @@
     margin: 0px 0px 0px 0.5%;
 }
 
+.p-numeros-lista { // Texto cuadro de Dialogo primera pantalla
+    
+}
 
+.p-texto-lista { // Texto cuadro de Dialogo primera pantalla
+
+}
 
 .pestaña {
     background: $color-pestaña_ligth;
