--- a/Koala/estilo.css
+++ b/Koala/estilo.css
@@ -78,6 +78,19 @@
 .texto--caja-titulo__margin {
   margin: 0px 0px 0px 0.5%; }
 
+.texto--p-numeros-lista {
+  font-size: 14px;
+  font-weight: bold;
+  margin: 0px 3px 0px 0px; }
+
+.texto--p-lista {
+  font-size: 14px;
+  margin: 0px 0px 0px 0px; }
+
+.texto--parrafo-final {
+  font-size: 14px;
+  margin: 0px 0px 0px 0px; }
+
 .pestaña {
   background: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
   height: 24px; }
@@ -156,6 +169,11 @@
 
 .cajas-gifs-resultados__margin {
   margin: 1% 0px 0px 0.6%; }
+
+.caja-crear-guifos-inicio {
+  width: 684px;
+  height: 386;
+  background: #E6E6E6; }
 
 /*Comportamiento*/
 body {
