Proceso de estilado caja

--- a/Koala/_elementos.scss
+++ b/Koala/_elementos.scss
@@ -82,10 +82,12 @@
     margin: 0px 0px 0px 0px;
 }
 
-.texto--parrafo-final{
+.texto--parrafo-crear-guifo-p {
     font-size: $font-size_mediana;
     margin: 0px 0px 0px 0px;
 }
+
+
 
 .pestaña {
     background: $color-pestaña_ligth;
@@ -155,7 +157,7 @@
 
 .caja-crear-guifos-inicio {
     width: 684px;
-    height: 386;
+    height: 386px;
     background: $color-background_cajas_clara;
 
 }
