--- a/Koala/estilo.css
+++ b/Koala/estilo.css
@@ -87,7 +87,7 @@
   font-size: 14px;
   margin: 0px 0px 0px 0px; }
 
-.texto--parrafo-final {
+.texto--parrafo-crear-guifo-p {
   font-size: 14px;
   margin: 0px 0px 0px 0px; }
 
@@ -172,7 +172,7 @@
 
 .caja-crear-guifos-inicio {
   width: 684px;
-  height: 386;
+  height: 386px;
   background: #E6E6E6; }
 
 /*Comportamiento*/
