Proceso texto terminado crear guifos

--- a/Koala/_bloques.scss
+++ b/Koala/_bloques.scss
@@ -49,6 +49,30 @@ body {
     width: 24px;
 }
 
+.div-pestaña-crear-guifos-1{
+    width: 98.8%;
+}
+.caja-crear-guifos-inicio-texto{
+    justify-content: space-between;
+}
+
+.div-contenedor-texto-crear {
+    height: 362px;
+    justify-content: flex-start;
+}
+
+.div-titulo-crear-guifos{
+    position: relative;
+    justify-content: flex-start;
+    width: 75.73%;
+
+}
+    .imagen-window{
+        position: absolute;
+        top: 35px;
+        left: -10%;
+    }
+
 .section-mis-guifos--crear-guifo--html {
     margin-top: 64px;
     width: 100%;
@@ -57,9 +81,6 @@ body {
         margin-top: 17px;
         width: 83.4%;
     }
-
-
-
 
 /*-------------------------------------------------------------------------*/
 
