--- a/Koala/_variables.scss
+++ b/Koala/_variables.scss
@@ -49,6 +49,13 @@ $ancho-boton_pequeño: 3.1%; //36px;
 $ancho-boton_buscar:  8.5%;//102px;
 $alto-boton_buscar: 36px; // 2.2%
 
+
+$ancho-caja-crear-gifos-1:  47.5%;//684px;
+$alto-caja-crear-gifos-1: 386px;
+$ancho-caja-crear-guifos-inicio-texto:  75.73%;//518px;
+$alto-caja-crear-guifos-inicio-texto: 190px;
+
+
 $ancho-boton_ver-mas: 81px; //;
 $alto-boton_ver-mas: 34px;
 $ancho-caja-gifs-sugeridos:25%; //288px;
