Creando botones crear guifos

--- a/Koala/_bloques.scss
+++ b/Koala/_bloques.scss
@@ -73,6 +73,10 @@ body {
         left: -10%;
     }
 
+    .caja-botones-crear-guifos-inicio {
+        justify-content: flex-end;   
+    }
+
 .section-mis-guifos--crear-guifo--html {
     margin-top: 64px;
     width: 100%;
