--- a/Koala/_variables.scss
+++ b/Koala/_variables.scss
@@ -55,6 +55,9 @@ $alto-caja-crear-gifos-1: 386px;
 $ancho-caja-crear-guifos-inicio-texto:  75.73%;//518px;
 $alto-caja-crear-guifos-inicio-texto: 190px;
 
+$ancho-caja-botones-crear-guifos-inicio:  100%;//518px;
+$alto-caja-botones-crear-guifos-inicio: 79px;
+
 
 $ancho-boton_ver-mas: 81px; //;
 $alto-boton_ver-mas: 34px;
