--- a/Koala/estilo.css
+++ b/Koala/estilo.css
@@ -26,6 +26,10 @@
   border: 1px solid #808080;
   box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF; }
 
+.boton--crear-gifos {
+  width: 144px;
+  margin-right: 2.5%; }
+
 .boton--grande {
   width: 12.1%; }
 
@@ -184,6 +188,10 @@
   width: 75.73%;
   height: 190px; }
 
+.caja-botones-crear-guifos-inicio {
+  width: 100%;
+  height: 79px; }
+
 /*Comportamiento*/
 body {
   background-color: #fef4fd;
@@ -234,6 +242,8 @@ body {
     position: absolute;
     top: 35px;
     left: -10%; }
+  body .caja-botones-crear-guifos-inicio {
+    justify-content: flex-end; }
   body .section-mis-guifos--crear-guifo--html {
     margin-top: 64px;
     width: 100%; }
