--- a/Koala/estilo.css
+++ b/Koala/estilo.css
@@ -28,7 +28,11 @@
 
 .boton--crear-gifos {
   width: 144px;
-  margin-right: 2.5%; }
+  margin-right: 30px; }
+
+.boton-cancelar-blanco {
+  background: #FFFFFF;
+  margin-right: 15px; }
 
 .boton--grande {
   width: 12.1%; }
