--- a/Koala/estilo.css
+++ b/Koala/estilo.css
@@ -124,6 +124,9 @@
 .pestaña--gif-sugeridos__margin {
   margin: 2px 0px 0px 0px; }
 
+.pestaña-crear-guifos-chequeo {
+  width: 100%; }
+
 .pestaña-texto {
   font-family: "Chakra Petch", sans-serif;
   font-size: 14px;
@@ -196,6 +199,24 @@
   width: 100%;
   height: 79px; }
 
+.caja-crear-guifos-chequeo {
+  width: 59.8%;
+  height: 548px;
+  background: #E6E6E6;
+  box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF; }
+
+.caja-crear-guifos-chequeo___margin {
+  margin: 5% 0px 0px 0px; }
+
+.caja-contenedor-grabacion {
+  width: 97.4%;
+  height: 440px;
+  border: 1px solid #979797;
+  box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000; }
+
+.caja-contenedor-grabacion__margin {
+  margin: 5% 0px 0px 0px; }
+
 /*Comportamiento*/
 body {
   background-color: #fef4fd;
@@ -248,6 +269,13 @@ body {
     left: -10%; }
   body .caja-botones-crear-guifos-inicio {
     justify-content: flex-end; }
+  body .div-pestaña-crear-guifos-2 {
+    display: flex;
+    flex-flow: row-reverse;
+    position: relative;
+    width: 100%; }
+  body .caja-crear-guifos-chequeo {
+    width: 860px; }
   body .section-mis-guifos--crear-guifo--html {
     margin-top: 64px;
     width: 100%; }
