Estiladp caja grabacion vista2

--- a/Koala/_bloques.scss
+++ b/Koala/_bloques.scss
@@ -87,6 +87,11 @@ body {
     width: 860px;
 }
 
+.controles-grabacion {
+    width: 100%;
+    justify-content: flex-end;
+    height: 67px;
+}
 
 .section-mis-guifos--crear-guifo--html {
     margin-top: 64px;
