--- a/Koala/_variables.scss
+++ b/Koala/_variables.scss
@@ -7,6 +7,8 @@ $color-background_caja_titulo: #FFFFFF;
 $color-background_caja-contenedor-busqueda-blanco: #FFFFFF;
 $color-background_cajas_oscura: #808080;
 $color-background_cajas_clara: #E6E6E6;
+$color-background_cajas_blanca:#FFFFFF;
+
 $color-background_boton_ver-mas: #2E32FB;
 $color-caja-gifs-sugeridos: rgba(230, 230, 230, 0) ;
 $color-texto-day:#110038;
@@ -37,7 +39,7 @@ $alto-caja-gifs-resultados: 304px;// 18.4%;
 $ancho-pestaña_principal: 100%; //1438px;
 $ancho-pestaña-caja-buscar: 99.5%; //1200px;
 $ancho-pestañas_caja-gifs-sugeridos: 97%;// 280px; 
-$pestaña-crear-guifos-chequeo: 100%;
+$pestaña-crear-guifos-chequeo: 98.8%;
 
 $ancho-caja_contenedora_buscar: 82.9%; //1200px;
 $ancho-caja-contenedor-busqueda-blanco: 88%;
@@ -47,7 +49,7 @@ $ancho-logo: 102.6px; //102.6px;
 $alto-logo: 64px;
 $ancho-boton_grande: 12.1%; //144px;
 $ancho-boton_mediano: 11%; //131px;
-$ancho-boton_pequeño: 3.1%; //36px;
+$ancho-boton_pequeño: 4.1%; //36px;
 
 $ancho-boton_buscar:  8.5%;//102px;
 $alto-boton_buscar: 36px; // 2.2%
