--- a/Koala/_elementos.scss
+++ b/Koala/_elementos.scss
@@ -1,5 +1,5 @@
 /*Elementos o clases genericas*/
-
+/*------------------botones--------------------------*/
 .boton { //Cambia el ancho
     display: inline-flex;
     background: $color-boton_ligth;
@@ -7,6 +7,39 @@
     border: 1px solid #110038;
     box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
+
+.boton-general {
+    display: inline-flex;
+    border: $border-boton-general;
+    box-shadow: $box-shadow_boton-general;
+    height: $alto-botones-general;
+    
+}
+
+.boton--grande  {width: $ancho-boton_grande;}
+.boton--mediano {width: $ancho-boton_mediano;}
+.boton--pequeno {width:$ancho-boton_pequeño;}
+
+.boton-rosado { background:$color-boton_rosado; }
+.boton-blanco { background: $color-boton_blanco; }
+.boton-rojo {background: $color-boton_rojo;}
+.boton-gris-claro {background: $color-boton-gris-claro; }
+
+
+.boton-general__margin30px {
+    margin-right: 30px;
+}
+
+.boton-general__margin15px {
+    margin-right: 15px;
+}
+
+.imagen-boton {
+    vertical-align: middle;
+}
+
+
+//no tocar estos abajo
 
 .boton--ver-mas {
     width:$ancho-boton_ver-mas;
@@ -24,22 +57,10 @@
     box-shadow: $box-shadow-boton-buscar;
 }
 
-.boton--crear-gifos {
-    width: 144px;
-    margin-right: 30px;
-}
-
-.boton-cancelar-blanco{
-    background: #FFFFFF;
-    margin-right: 15px;
-}
+//no tocar estos arriba
 
 
-.boton--grande  {width: $ancho-boton_grande;}
-.boton--mediano {width: $ancho-boton_mediano;}
-.boton--pequeno {width:$ancho-boton_pequeño;}
-
-
+/*------------------------Texto botones---------------------*/
 
 
 .boton-texto {//cambia font-size, color, margin, padding, line-height
@@ -48,7 +69,8 @@
     letter-spacing: 0;
 }
 
-.boton-texto__day {color: $color-texto_botones-oscuro;}
+.boton-texto-azul-oscuro {color: $color-texto_botones-oscuro;}
+.boton-texto-blanco {color: $color-texto_botones-claro;}
 .boton-texto--grande {font-size: $font-size_grande; line-height: $line-height_mediana;}
 .boton-texto--mediano {font-size: $font-size_grande; line-height: $line-height_mediana;}
 .boton-texto--pequeno {font-size: $font-size_pequeña; line-height: $line-height_pequena;}
@@ -64,7 +86,7 @@
     color: $color-texto_botones-claro;
 }
     
-
+/*----------------------------texto pagina---------------------------------*/
 .texto {
     font-family: $font-family_principal;
     font-size: $font-size_grande;
