--- a/Koala/estilo.css
+++ b/Koala/estilo.css
@@ -5,12 +5,49 @@
 /*Line-height*/
 /*Bordes*/
 /*Elementos o clases genericas*/
+/*------------------botones--------------------------*/
 .boton {
   display: inline-flex;
   background: #F7C9F3;
   height: 36px;
   border: 1px solid #110038;
   box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF; }
+
+.boton-general {
+  display: inline-flex;
+  border: 1px solid #110038;
+  box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
+  height: 36px; }
+
+.boton--grande {
+  width: 144px; }
+
+.boton--mediano {
+  width: 131px; }
+
+.boton--pequeno {
+  width: 36px; }
+
+.boton-rosado {
+  background: #F7C9F3; }
+
+.boton-blanco {
+  background: #FFFFFF; }
+
+.boton-rojo {
+  background: #FF6161; }
+
+.boton-gris-claro {
+  background: #F0E5EE; }
+
+.boton-general__margin30px {
+  margin-right: 30px; }
+
+.boton-general__margin15px {
+  margin-right: 15px; }
+
+.imagen-boton {
+  vertical-align: middle; }
 
 .boton--ver-mas {
   width: 81px;
@@ -26,30 +63,17 @@
   border: 1px solid #808080;
   box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF; }
 
-.boton--crear-gifos {
-  width: 144px;
-  margin-right: 30px; }
-
-.boton-cancelar-blanco {
-  background: #FFFFFF;
-  margin-right: 15px; }
-
-.boton--grande {
-  width: 12.1%; }
-
-.boton--mediano {
-  width: 11%; }
-
-.boton--pequeno {
-  width: 4.1%; }
-
+/*------------------------Texto botones---------------------*/
 .boton-texto {
   font-family: "Chakra Petch", sans-serif;
   text-decoration: none;
   letter-spacing: 0; }
 
-.boton-texto__day {
+.boton-texto-azul-oscuro {
   color: #110038; }
+
+.boton-texto-blanco {
+  color: #FFFFFF; }
 
 .boton-texto--grande {
   font-size: 16px;
@@ -73,6 +97,7 @@
   line-height: 32px;
   color: #FFFFFF; }
 
+/*----------------------------texto pagina---------------------------------*/
 .texto {
   font-family: "Chakra Petch", sans-serif;
   font-size: 16px;
